@@ -1,7 +1,8 @@
 /*
- * Copyright 2014-2021 JetBrains s.r.o and contributors. Use of this source code is governed by the Apache 2.0 license.
+ * Copyright 2014-2024 JetBrains s.r.o and contributors. Use of this source code is governed by the Apache 2.0 license.
  */
 
+import internal.*
 import org.gradle.api.*
 import org.gradle.api.tasks.testing.*
 import org.gradle.jvm.tasks.*
@@ -10,54 +11,39 @@ import org.gradle.kotlin.dsl.*
 import org.jetbrains.kotlin.gradle.targets.jvm.tasks.*
 
 fun Project.configureJvm() {
-    val jdk = when (name) {
+    val compileJdk = when (name) {
         in jdk11Modules -> 11
         else -> 8
     }
 
-    val configuredVersion: String by rootProject.extra
-
     kotlin {
         jvm()
 
-        sourceSets.apply {
-            val jvmMain by getting {
+        sourceSets {
+            jvmMain {
                 dependencies {
-                    if (jdk > 6) {
-                        api("org.jetbrains.kotlin:kotlin-stdlib-jdk7:${Versions.kotlin}")
-                    }
-                    if (jdk > 7) {
-                        api("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${Versions.kotlin}")
-                        api("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${Versions.coroutines}") {
-                            exclude(module = "kotlin-stdlib")
-                            exclude(module = "kotlin-stdlib-jvm")
-                            exclude(module = "kotlin-stdlib-jdk8")
-                            exclude(module = "kotlin-stdlib-jdk7")
-                        }
-                    }
-
-                    api("org.slf4j:slf4j-api:${Versions.slf4j}")
+                    api(libs.slf4j.api)
                 }
             }
 
-            val jvmTest by getting {
+            jvmTest {
                 dependencies {
-                    implementation(kotlin("test-junit5"))
-                    implementation("org.junit.jupiter:junit-jupiter:${Versions.junit}")
-                    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-debug:${Versions.coroutines}")
+                    implementation(libs.kotlin.test.junit5)
+                    implementation(libs.junit)
+                    implementation(libs.kotlinx.coroutines.debug)
                 }
             }
         }
     }
 
     tasks.register<Jar>("jarTest") {
-        dependsOn(tasks.getByName("jvmTestClasses"))
-        archiveClassifier.set("test")
-        from(kotlin.targets.getByName("jvm").compilations.getByName("test").output)
+        dependsOn(tasks.named("jvmTestClasses"))
+        archiveClassifier = "test"
+        from(kotlin.jvm().compilations["test"].output)
     }
 
-    configurations.apply {
-        val testCompile = findByName("testCompile") ?: return@apply
+    configurations {
+        val testCompile = findByName("testCompile") ?: return@configurations
 
         val testOutput by creating {
             extendsFrom(testCompile)
@@ -66,29 +52,28 @@ fun Project.configureJvm() {
         }
     }
 
-    val jvmTest: KotlinJvmTest = tasks.getByName<KotlinJvmTest>("jvmTest") {
-        ignoreFailures = true
+    val jvmTest = tasks.named<KotlinJvmTest>("jvmTest") {
         maxHeapSize = "2g"
         exclude("**/*StressTest*")
         useJUnitPlatform()
-        configureJavaLauncher(jdk)
+        configureJavaToolchain(compileJdk)
     }
 
-    tasks.create<Test>("stressTest") {
-        classpath = files(jvmTest.classpath)
-        testClassesDirs = files(jvmTest.testClassesDirs)
+    tasks.register<Test>("stressTest") {
+        classpath = files(jvmTest.get().classpath)
+        testClassesDirs = files(jvmTest.get().testClassesDirs)
 
-        ignoreFailures = true
         maxHeapSize = "2g"
         jvmArgs("-XX:+HeapDumpOnOutOfMemoryError")
         setForkEvery(1)
         systemProperty("enable.stress.tests", "true")
         include("**/*StressTest*")
         useJUnitPlatform()
-        configureJavaLauncher(jdk)
+        configureJavaToolchain(compileJdk)
     }
 
-    tasks.getByName<Jar>("jvmJar").apply {
+    val configuredVersion: String by rootProject.extra
+    tasks.named<Jar>("jvmJar") {
         manifest {
             attributes(
                 "Implementation-Title" to name,
@@ -101,15 +86,31 @@ fun Project.configureJvm() {
 }
 
 /**
- * JUnit 5 requires Java 11+
+ * On local machine use for tests the JDK used for compilation.
+ * On CI use the default JDK.
  */
-fun Test.configureJavaLauncher(jdk: Int) {
-    if (jdk < 11) {
-        val javaToolchains = project.extensions.getByType<JavaToolchainService>()
-        val customLauncher = javaToolchains.launcherFor {
-            languageVersion = JavaLanguageVersion.of("11")
-        }
-        javaLauncher = customLauncher
+private fun Test.configureJavaToolchain(compileJdk: Int) {
+    // JUnit 5 requires JDK 11+
+    val testJdk = (if (CI) currentJdk else compileJdk).coerceAtLeast(11)
+    val javaToolchains = project.the<JavaToolchainService>()
+
+    javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(testJdk)
+    }
+
+    if (testJdk >= 16) {
+        // Allow reflective access from tests
+        jvmArgs(
+            "--add-opens=java.base/java.net=ALL-UNNAMED",
+            "--add-opens=java.base/java.time=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+        )
+    }
+
+    if (testJdk >= 21) {
+        // coroutines-debug use dynamic agent loading under the hood.
+        // Remove as soon as the issue is fixed: https://youtrack.jetbrains.com/issue/KT-62096/
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 }
 
